--- a/src/BestBooks.css
+++ b/src/BestBooks.css
@@ -1,3 +1,10 @@
-.jumbotron{
+.jumbotron {
   margin-bottom: 0;
+}
+.cardDiv {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
 }
